--- a/scss/_promos.scss
+++ b/scss/_promos.scss
@@ -11,6 +11,11 @@
         object-fit: cover;
     
     }
+    p{
+        min-height: 150px;
+        display: flex;
+        align-items: center;
+    }
     
 }
 
